# forecast-electricity

./: .gitignore  README.md
.github/workflows/: ci.yml  live_update.yml  pipeline.yml
backend/: .gitignore  app.py  experiments_log.md  main.py  pyproject.toml  requirements.txt  walkthrough.md
backend/notebooks/: exploration.ipynb
backend/scripts/: build_dataset.py  export_data.py  export_forecast.py  fetch_data.py  fetch_rte_forecast.py  fetch_temperatures.py  insert_historical.py  predict.py
backend/src/db/: client.py
backend/src/ingestion/: rte_client.py
backend/src/models/: backtest_chronos.py  backtest_timesfm.py  predict_chronos.py  predict_lightgbm.py  predict_naive.py  predict_timesfm.py  predict_xgboost.py
backend/src/processing/: features.py
frontend/: index.html  package-lock.json  package.json  test_supabase.js
frontend/public/data/: grid_data.json
frontend/scratch/: test_flatpickr.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CO2ImportsChart.jsx  ComparisonTable.jsx  ConsumptionChart.jsx  ExtremePoints.jsx  MetricCard.jsx  MixChart.jsx  PeriodSummary.jsx  Sidebar.jsx
